--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -7,7 +7,10 @@ services:
   run_command: node client/index.js
   envs:
   - key: WS_LOCATION
-    value: ${server.PUBLIC_URL}
+    value: ${APP_DOMAIN}
+    scope: RUN_TIME
+  - key: WS_PORT
+    value: ${server.PRIVATE_PORT}
     scope: RUN_TIME
 - name: server
   github:
