--- a/.do/client.app.yaml
+++ b/.do/client.app.yaml
@@ -1,5 +1,4 @@
 name: sample-ws-client
-
 services:
 - name: client-ws
   environment_slug: node-js
@@ -9,5 +8,5 @@ services:
   run_command: node client/index.js
   envs:
   - key: WS_LOCATION
-    value: "sample-ws-server-i8wtl.ondigitalocean.app"
+    value: "sample-ws-server-pv3cu.ondigitalocean.app"
     scope: RUN_TIME
