--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/bojand/sample-ws#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "ws": "^8.4.0"
+    "socket.io": "^4.5.0"
   },
   "devDependencies": {
     "standard": "^17.0.0"
